[gd_scene load_steps=3 format=3 uid="uid://b3spmc7nwwk5i"]

[ext_resource type="Script" uid="uid://ogtesyaks1ka" path="res://game/sample_novel.gd" id="1_sddic"]
[ext_resource type="PackedScene" uid="uid://4ho7mnmbl115" path="res://game/dialogue_ui.tscn" id="2_ydbqr"]

[node name="sample_novel" type="Node2D"]
script = ExtResource("1_sddic")

[node name="BG" type="Node2D" parent="."]

[node name="dialogue_ui" parent="." instance=ExtResource("2_ydbqr")]
offset_left = 629.0
offset_top = 361.0
offset_right = 629.0
offset_bottom = 361.0

[node name="MainMenu" type="Button" parent="."]
offset_left = 16.0
offset_top = 14.0
offset_right = 199.0
offset_bottom = 59.0
text = "Return to main menu"

[node name="HUD" type="CanvasLayer" parent="."]

[node name="progress_container" type="VBoxContainer" parent="HUD"]
offset_left = 1074.0
offset_top = 3.0
offset_right = 1274.0
offset_bottom = 43.0

[node name="gpa" type="ProgressBar" parent="HUD/progress_container"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="sociallife" type="ProgressBar" parent="HUD/progress_container"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="depression" type="ProgressBar" parent="HUD/progress_container"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[connection signal="finished" from="dialogue_ui" to="." method="_on_dialogue_ui_finished"]
[connection signal="pressed" from="MainMenu" to="." method="_on_main_menu_pressed"]
